--- a/views/pages/create.ejs
+++ b/views/pages/create.ejs
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <form action="/todos" method="post">
+            <form action="/todo" method="post">
 
                 <strong>Title</strong>
                 <div class="input-group mb-3">
