--- a/views/pages/edit.ejs
+++ b/views/pages/edit.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <form action="/todos/update/<%= data.id %> " method="post">
+            <form action="/todo/update/<%= data.id %> " method="post">
 
                 <strong>Title</strong>
                 <div class="input-group mb-3">
@@ -32,7 +32,7 @@
                 </div>
 
                 <button type="submit" class="btn btn-primary" id="update-button">Update</button>
-                <a href="/todos" class="btn btn-secondary">Back</a>
+                <a href="/todo" class="btn btn-secondary">Back</a>
 
             </form>
         </div>
